Entry IDsg
